--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       type="text/css"
     />
     <script src="./script.js" type="module" defer></script>
+    <script src="./main.js" type="module" defer></script>
   </head>
   <body>
     <div id="container">
@@ -36,7 +37,6 @@
           <div id="minTemp">Min Temp:</div>
           <div id="weather_minTemp"></div>
           <div id="weatherType">Weather Type:</div>
-          <!-- <img src="" alt="" id="weather_type" /> -->
           <div id="weather_type"></div>
         </div>
         <div id="forecast">
